--- a/work/work.css
+++ b/work/work.css
@@ -43,6 +43,10 @@
 /* -----work main section */
 
 .work__section {
+  display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
   margin: 5rem;
 }
 .work__section-title {
@@ -50,6 +54,7 @@
 font-size: 34px;
 line-height: 50px;
 color: #21243D;
+flex: 0 1 100px;
 }
 .container-1__box {
 }
@@ -79,15 +84,27 @@ font-size: 20px;
 color: #21243D;
 }
 .work__section-container-2 {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
+
+.container-2_p-block{
+  /* flex: 0 1 20%; */
+  margin: 10px 0;
+  width: 100%;
+}
+
 .container-2__p {
   font-size: 18px;
-line-height: 24px;
+  line-height: 24px;
+  /* flex: 0 0 auto; */
+
 }
 .container-2__img {
+align-self: start;
 }
-.work__section-container-3 {
-}
+
 .container-3__h3 {
   font-weight: 500;
 font-size: 30px;
@@ -121,8 +138,19 @@ color: #000000;
   margin-top: 2rem;
 }
 .container-3__img2 {
+
+}
+
+.container-3__imgblock{
   display: flex;
-margin: 4rem 0;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+  padding-bottom: 4rem;
+}
+
+.container-3__imgblock>img{
+  margin-bottom: 3rem;
 }
 
 /* footer */
